# simple-image-dedupe

./: CLAUDE.md  README.md  hasher.py  main.py  pyproject.toml  scanner.py
docs/: add-os-path-autocomplete.md
docs/superpowers/plans/: 2026-03-27-os-path-autocomplete.md
docs/superpowers/specs/: 2026-03-25-os-path-autocomplete-design.md
static/: style.css
templates/: index.html
templates/partials/: group_card.html  group_resolved.html  groups.html  path_suggestions.html
tests/: test_path_resolution.py  test_templates.py
